--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       docker_images:
-        description: 'cloudnas/clouddrive2-unstable:0.8.0-beta3'
+        description: 'clouddrive2-unstable:latest'
         required: true
         default: 'alpine:latest'  # 设置默认的 Docker 镜像列表
 
